# ethunter

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.omc/: notepad.md  prd.json  progress.txt  project-memory.json
.omc/plans/: c-call-graph-analyzer-plan.md  cg-bench-benchmark.md  cg-bench-correctness-analysis.md  cg-bench-fix-callers.md  cg-bench-fixture-repair-plan.md  file-blacklist-plan.md  query-json-optimization.md  ralplan-test-coverage.md
.omc/sessions/: 5eddea5b-594a-41bd-8aa1-100e933b5f93.json  78781c93-c02b-4581-bb39-44cd0480e4c8.json  c45b5b4e-51ad-49d2-9d85-87e9be063819.json  d716f95e-1c71-421e-858e-8ecce5cffb6d.json  edd5b995-dc77-4679-85a3-1d2b76601d76.json
.omc/specs/: deep-interview-c-call-graph-analyzer.md  deep-interview-cg-bench-benchmark.md  deep-interview-cg-bench-correctness.md  deep-interview-cg-bench-fix-callers.md  deep-interview-cg-bench-test-cases.md  deep-interview-cli-refactor.md  deep-interview-default-output-files.md  (+5 more)
docs/: et_bench_architectural_analysis.md  et_bench_architecture_analysis.md  et_bench_architecture_analysis_part2.md  et_bench_design_gap_analysis.md  et_bench_false_positive_analysis.md  et_bench_false_positive_analysis_v2.md  et_bench_false_positive_analysis_v3.md  et_bench_gt_fix_report.md  et_bench_recall_gap_analysis.md  path_b_removal_attempts_analysis.md
src/ethunter/: cli.py
tests/: test_analyzers.py  test_benchmark.py  test_cg_bench.py  test_cross_file.py  test_dataflow_engine.py  test_et_bench.py  test_field_resolver.py  test_query_json.py  test_scanner.py  test_scoped_store.py
(+480 files in other folders)
